Fix image overflow bug

--- a/assets/css/_main.css
+++ b/assets/css/_main.css
@@ -106,18 +106,18 @@ main#main-content {
   flex-grow: 1;
 }
 
+main#main-content img {
+  max-width: 100%;
+  border-radius: 0.5rem;
+  margin: 1rem 0;
+}
+
 footer#main-footer {
   margin: 5rem auto 0;
 }
 
 section {
   font-family: var(--font-family-content);
-}
-
-section img {
-  max-width: 100%;
-  border-radius: 0.5rem;
-  margin: 1rem 0;
 }
 
 a {
